# parrillero-duitama

./: .gitignore  README.md
parrillero-backend/: Dockerfile  fly.toml  pyproject.toml
parrillero-backend/app/: auth.py  backup.py  database.py  main.py  models.py
parrillero-backend/static/: index.html
parrillero-backend/static/assets/: index-B0wMtais.css  index-DHKOTX74.js
parrillero-frontend/: index.html  package-lock.json  package.json
parrillero-frontend/src/: App.css  App.tsx
parrillero-frontend/src/lib/: api.ts
